assets/css/bootstrap.css
/* ... */
.app-list .app-link .app-icon,
.app-search-list .app-link .app-icon {
  float: left;
  margin-right: 8px;
}
.app-list .app-link .app-info,
.app-search-list .app-link .app-info {
  float: left;
  font-size: 16px;
}
.app-list .app-link .app-score-icon,
.app-search-list .app-link .app-score-icon {
  float: right;
}
.app-list .app-link:hover,
.app-search-list .app-link:hover {
  background-color: #eee;
}
.app-list .app-link:first-child,
.app-search-list .app-link:first-child {
  border-radius: 3px 3px 0 0;
}
.app-list .app-link:last-child,
.app-search-list .app-link:last-child {
  border-radius: 0 0 3px 3px;
  border-bottom: none;
}
.app-list .app-list-inner {
  max-height: 300px;
}
.app-search-list .module-title form {
  margin: 10px 0 -10px;
  position: relative;
}
.app-search-list .module-title form input {
  position: relative;
  z-index: 0;
}
.app-search-list .module-title form button {
  border: none;
  padding: 7px 13px;
  margin: 0;
  background: none;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
}
.app-search-list .app-list-inner {
  max-height: 210px;
}
.app-wall {
  background: #eee;
  position: relative;
}
.app-wall .app-wall-header {
  padding: 1em 0;
  background-color: #fb7200;
  color: #ffffff;
}
.app-wall .app-wall-header h1,
.app-wall .app-wall-header h2,
.app-wall .app-wall-header h3,
.app-wall .app-wall-header h4 {
  color: #ffffff;
  font-size: 1.25em;
  text-transform: uppercase;
  font-weight: 400;
  margin: 0 1em;
}
.app-wall .app-wall-body {
  padding: 5px 7px;
}
.app-wall .app-wall-body .app-wall-body-inner {
  text-align: left;
}
.app-wall .app-pin {
  display: inline-block;
  position: relative;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
}
.app-wall .app-pin .close {
  font-size: 16px;
  position: absolute;
  top: 3px;
  right: 5px;
  z-index: 1;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
}
.app-wall .app-pin .close:hover {
  color: #d52335;
}
.app-wall .app-pin a {
  display: block;
  padding: 10px;
  text-decoration: none;
  z-index: 0;
  width: 87px;
  height: 170px;
  display: inline-block;
  margin: 5px 3px;
  overflow: hidden;
  position: relative;
  background: #fff;
  border-radius: 2px;
  -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.4);
  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.4);
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
}
.app-wall .app-pin .app-icon {
  display: block;
}
.app-wall .app-pin .app-name {
  height: 40px;
  font-size: 1em;
  color: #222222 !important;
  padding: 10px 0 15px 0;
  text-align: left;
  overflow: hidden;
}
.app-wall .app-pin .app-rating,
.app-wall .app-pin .app-price {
  position: absolute;
  bottom: 10px;
  font-size: 12px;
  line-height: 15px;
}
.app-wall .app-pin .app-rating {
  font-size: 14px;
  left: 10px;
  color: #fb7200 !important;
  font-weight: 700;
}
.app-wall .app-pin .app-price {
  right: 10px;
  color: #818485 !important;
}
.app-wall .app-pin:hover {
  top: -3px;
}
.app-wall .app-pin:hover .close {
  opacity: 1;
}
.app-wall .app-pin:hover a {
  -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
}
.app-wall .app-pin:hover .app-name {
  color: #26a2fb !important;
}
.account #main {
  min-height: 75%;
}
.account #main > .container {
  padding-bottom: 140px;
}
.account a.btn-primary,
.account a.btn-success {
  font-size: 14px !important;
  margin-bottom: 0;
  padding: 6px 12px;
  font-size: 16px;
  line-height: 20px;
  border-radius: 3px;
}
.account .site-header {
  top: 0;
}
.account #main {
  margin-top: 120px;
}
.account .container-fluid {
  position: relative;
}
.account .portal-nav {
  position: relative;
}
.account .module-nav {
  display: none;
  visibility: hidden;
  margin-bottom: 0 !important;
}
.account .sidr-inner:first-child {
  text-align: center;
}
.account .site-footer {
  margin-top: -140px;
  height: 140px;
  position: relative;
  z-index: 1;
}
.offer-workflow .sidr-inner,
.claim-workflow .sidr-inner {
  display: none !important;
}
.offer-workflow .sidr-inner:first-child,
.claim-workflow .sidr-inner:first-child {
  display: block !important;
}
.login {
  background: #ffffff url(../images/appscore-apps-background.jpg) no-repeat center top;
}
.login header {
  margin-top: 30px;
}
.login a.brand {
  width: 220px;
  height: 50px;
  display: block;
  cursor: pointer;
  text-indent: -9999px;
  background: url(../images/appbackr-brand.jpg) no-repeat center center;
}
.login .brand {
  margin: 0 auto 1em;
}
.login .login-container {
  margin: 2.25em 30px .5em;
  border: 1px solid #ddd;
  border-radius: 4px;
  background-color: #fff;
}
.login .login-inner {
  padding: 0 2em 1em;
}
.login .login-inner h2 {
  margin: 0 0 20px;
  font-size: 2em;
  text-align: center;
}
.login .login-inner h6 {
  font-size: .875em;
  margin: 0 0 20px;
}
.login .login-inner.border-bottom {
  border-bottom: 1px solid #ddd;
  padding-top: 1.25em;
  padding-bottom: 1em;
}
.login .login-inner.alt-logins {
  padding: 0;
}
.login .login-inner.alt-logins .login-inner {
  padding: 1.25em 2em;
}
.login .login-inner.alt-logins .span6:first-child .login-inner {
  border-bottom: 1px solid #ddd;
}
@media (min-width: 768px) {
  .login .login-inner.alt-logins .span6:first-child .login-inner {
    border-right: 1px solid #ddd;
    border-bottom: none;
  }
  .login .login-inner.alt-logins .span6 {
    width: 50% !important;
    margin: 0 !important;
  }
}
.login .login-inner .border-right {
  border-right: 1px solid #ddd;
}
.login .login-form input[type="text"],
.login .login-form input[type="password"] {
  width: 100%;
  height: auto;
  padding: 12px 0 !important;
  text-indent: 15px;
  font-size: 23px;
  line-height: normal;
  font-weight: 300;
  margin-bottom: 8px;
}
/* ... */

